samples/_failures_safe/1761427893_5ff64f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d78887c0.c: In function ‘tokenize’:
./samples/SAFE/__tmp_d78887c0.c:175:27: error: expected ‘]’ at end of input
  175 |         tokens[token_count
      |                           ^
      |                           ]
./samples/SAFE/__tmp_d78887c0.c:175:9: error: expected declaration or statement at end of input
  175 |         tokens[token_count
      |         ^~~~~~
./samples/SAFE/__tmp_d78887c0.c:175:9: error: expected declaration or statement at end of input
